k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-mbinet
  namespace: mbinet-prod
  labels:
    run: api-mbinet
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app:  api-mbinet
