k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-mbinet-ingress
  namespace: mbinet-prod
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: "api.mbinet.click"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-mbinet
                port:
                  number: 5000
  tls:
    - hosts:
        - "api.mbinet.click"
      secretName: api-mbinet-click-tls
